...
        modifier = Modifier
            .fillMaxWidth()
            .height(310.dp)
            .padding(20.dp)
            .border(border = BorderStroke(width = 10.dp, color = MaterialTheme.colors.onError))
            .background(color = MaterialTheme.colors.onSurface)
            .testTag("Pokemon Info Card"),

        onClick = onClick,
    ) {
        Column {
            Image(
                painter = painterResource(pokemonImage),
                contentDescription = "Pokemon Image Info",
                modifier = Modifier
                    .background(MaterialTheme.colors.onSurface)
                    .fillMaxWidth()
                    .height(140.dp)
            )
            InfoRow(propertyName = "Name: ", property = pokemonName)
...
