...
            MyFloatingActionButton { navigateToSearch() }
        }
    ) {
        LazyColumn(
            modifier = Modifier
                .padding(it)
                .testTag("Pokemon LazyList"),
        ) {
            items(listPokemonImage.size) { index ->
                PokemonCard(
                    pokemonImage = listPokemonImage[index]
                )
                {
...
